Add more module details